--- a/public/css/main.css
+++ b/public/css/main.css
@@ -44,18 +44,22 @@ p {
 }
 
 .filter {
+    width: 100%;
+    max-width: 500px;
+    margin: 0 auto;
     display: none;
-
     position: absolute;
     top: 108px;
     left: 0;
+    right: 0;
     z-index: 2;
-
     background-color: white;
-    width: 100%;
-    height: 500px;
+    padding: 20px;
 }
 
+.filter button {
+    float: right;
+}
 
 .card-wrap {
     margin: 0 auto 20px;
@@ -117,6 +121,7 @@ p {
 }
 
 .reserved {
+    cursor: pointer;
     display: inline;
     background-color: rgba(211, 211, 211, 0.32);
     padding: 0 2px;
@@ -150,6 +155,7 @@ p {
 
 .rating-mark {
     text-align: center;
+    font-weight: bold;
     font-size: 40px;
 }
 
@@ -175,7 +181,7 @@ p {
     display: none;
     width: 100%;
     max-height: 500px;
-    overflow-y: scroll;
+    overflow-y: auto;
     padding: 0 15px;
 }
 
