--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -1,7 +1,7 @@
 .form-block {
     background-color: rgba(161, 215, 211, 0.49);
     padding: 10px;
-    margin: 20px 0;
+    margin: 20px 0 60px;
     border-radius: 20px;
 }
 .form-block h4{
