--- a/public/css/main.css
+++ b/public/css/main.css
@@ -235,6 +235,7 @@ p {
     display: none;
     background-color: white;
     position: absolute;
+    z-index: 2;
 }
 
 .reserve-form-container input {
