--- a/public/css/main.css
+++ b/public/css/main.css
@@ -61,6 +61,26 @@ p {
     float: right;
 }
 
+.container {
+    position: relative;
+}
+
+header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    max-width: inherit;
+    margin: 0 auto;
+
+    z-index: 2;
+    background: #f8fafc;
+}
+
+main {
+    margin-top: 156px;
+}
+
 .card-wrap {
     margin: 0 auto 20px;
     max-width: 450px;
@@ -88,9 +108,9 @@ p {
 .channels {
     border-bottom: 1px solid lightgrey;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-around;
     font-size: 15px;
-    padding-bottom: 5px;
 }
 
 .channels span {
@@ -98,6 +118,7 @@ p {
     padding: 0 10px;
     border: 1px solid lightgrey;
     border-radius: 10px;
+    margin-bottom: 5px;
 }
 
 .info-container {
@@ -118,6 +139,15 @@ p {
 
 .right-col {
     text-align: right;
+}
+
+.self-price::before, .channel-prices::before {
+    content: '';
+    position: absolute;
+    right: 20px;
+    height: 1px;
+    width: 60px;
+    background-color: rgba(211, 211, 211, 0.5);
 }
 
 .reserved {
@@ -155,10 +185,32 @@ p {
     margin-top: 10px;
 }
 
+.users-mark {
+    position: absolute;
+    left: 10%;
+}
+
 .rating-mark {
     text-align: center;
     font-weight: bold;
-    font-size: 40px;
+    font-size: 37px;
+    line-height: 37px;
+    margin-bottom: 15px;
+    padding: 10px 0;
+    height: 60px;
+}
+
+.rating-total {
+    width: 60px;
+    position: absolute;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+}
+
+.do-rating-button {
+    position: absolute;
+    right: 10%;
 }
 
 .rating-form {
@@ -182,7 +234,7 @@ p {
 .comments {
     display: none;
     width: 100%;
-    max-height: 500px;
+    max-height: 330px;
     overflow-y: auto;
     padding: 0 15px;
 }
@@ -218,6 +270,8 @@ p {
 .comment-body h5 {
     padding: 0;
     margin-bottom: 0;
+    font-size: 0.9rem;
+    font-weight: bold;
 }
 
 .comment-body {
@@ -241,6 +295,11 @@ p {
 .reserve-form-container input {
     display: inline;
     width: 122px;
+}
+
+.pagination-wrap {
+    display: flex;
+    justify-content: center;
 }
 
 .reserve-button {
