--- a/public/css/main.css
+++ b/public/css/main.css
@@ -66,6 +66,7 @@ p {
 }
 
 .card-wrap {
+    box-shadow: 0px 0px 7px 4px rgba(0, 0, 0, 0.1);
     margin: 0 auto 20px;
     max-width: 450px;
     border-radius: 20px;
@@ -277,8 +278,8 @@ p {
 }
 
 .reserve-form-container input {
-    display: inline;
-    width: 122px;
+    width: 100px;
+    margin-bottom: 5px;
 }
 
 .pagination-wrap {
